# berd

./: .o.d  README.md
berd/: AIAvailability.swift  AIChatService.swift  ChatView.swift  GeminiService.swift  Info.plist  Item.swift  LocalModelService.swift  PCCService.swift  PerplexityService.swift  VisualIntelligenceHelper.swift  berd-Bridging-Header.h  berdApp.swift
berd.xcodeproj/: project.pbxproj
berd.xcodeproj/project.xcworkspace/xcuserdata/undivisible.xcuserdatad/: UserInterfaceState.xcuserstate
berd.xcodeproj/xcuserdata/undivisible.xcuserdatad/xcschemes/: xcschememanagement.plist
berd/Assets.xcassets/BerdLogo.imageset/: Contents.json
berd/Resources/Shortcuts/Berd-PCC.shortcut/: Contents.json
berdTests/: berdTests.swift
berdUITests/: berdUITests.swift  berdUITestsLaunchTests.swift
berdcore/: CMakeLists.txt  README.md
berdcore/include/: berdcore.h
berdcore/src/: berdcore.cpp
